ui extension: move drag and drop to new window